dom query selector.
get element by id

--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div>
-        <h1 id="headerci">
-            selam   
-        </h1>
-    </div>
-    
-<script src="script.js" type="text/Javascript"></script>
+    <h1 id="example">Örnek dom elementi</h1>
 </body>
+<script src="script.js"></script>
 </html>
