--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="example">Örnek dom elementi</h1>
+    <p id="elementP">Örnek dom elementi</p>
+    <h4 id="baslikH">
+        <p class="sekil">salam</p>
+    </h4>
+    <p>Lorem ipsum dolor sit amet, consectet<p>
+
+    <p id="demo" class="sekil">demo1 burada gözükür</p>
+    <hr>
+    <p id="demo2"></p>
+
+
+    <p id="lonely"></p>
+
 </body>
 <script src="script.js"></script>
+<script src="dom.js"></script>
 </html>
