--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <p id="lonely"></p>
 
+    <!-- onekeyup=event when press up(pressed)-->
+    <p><input id="f" onkeyup="convert('F')"> degrees Fahrenheit</p> 
+
+
 </body>
 <script src="script.js"></script>
 <script src="dom.js"></script>
