hoisting error,closures and carrying

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="elementP">Örnek dom elementi</p>
+    <!-- <p id="elementP">Örnek dom elementi</p>
     <h4 id="baslikH">
         <p class="sekil">salam</p>
     </h4>
@@ -19,12 +19,13 @@
 
     <p id="lonely"></p>
 
-    <!-- onekeyup=event when press up(pressed)-->
-    <p><input id="f" onkeyup="convert('F')"> degrees Fahrenheit</p> 
+    <p><input id="f" onkeyup="convert('F')"> degrees Fahrenheit</p>  -->
 
+    <h1>Lorem, ipsum dolor.</h1>
 
 </body>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script>
 <script src="dom.js"></script>
-<script src="objects.js"></script>
+<script src="objects.js"></script> -->
+<script src="interview.js"></script>
 </html>
