--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <!-- <script src="script.js"></script>
 <script src="dom.js"></script>
 <script src="objects.js"></script> -->
-<script src="interview.js"></script>
+<script src="./interview_module.js" ></script>
+<script src="interview.js" type="module"></script>
 </html>
