Split each new sentence to a separate line in the paragraph text. A sentence text could terminated with a period

--- a/index.html
+++ b/index.html
@@ -23,29 +23,17 @@
 
     <h1>heading</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
-        quidem? Nihil placeat amet cupiditate unde illo, eum nostrum maxime minus
-        reprehenderit in explicabo architecto dicta recusandae expedita
-        dignissimos cum? Exercitationem necessitatibus corrupti, fugit officiis,
-        nostrum quos accusamus quas ad tenetur enim laborum dolorem non,
-        temporibus placeat minima! Culpa velit ad magni sit, fuga, id illo veniam
-        assumenda quae laudantium, eius iusto perspiciatis minima modi rerum
-        voluptates? Quas explicabo obcaecati, sit, est eveniet fuga porro possimus
-        ea fugit perferendis earum repellat aut voluptate doloremque, nostrum
-        sequi nulla! Incidunt illum reprehenderit optio nostrum corporis inventore
-        eos, sed non! Natus delectus in itaque ipsa tempore dolore, similique
-        vitae veritatis cum labore praesentium! Necessitatibus rerum aliquam
-        itaque quod ipsum beatae nam ullam cupiditate voluptatum porro! Aspernatur
-        earum soluta amet aperiam ipsum et iusto recusandae modi provident facere.
-        Quibusdam ratione molestiae vitae ipsa rem quam aliquid voluptatum
-        reiciendis modi a non qui, optio quo. Natus illo repudiandae eaque amet,
-        possimus similique. Vero facere excepturi quod, ad, quaerat nisi amet
-        commodi reprehenderit autem labore, optio neque. Obcaecati commodi quas
-        consequuntur optio perferendis, earum quasi, modi iusto unde incidunt
-        ipsum quis eligendi repellendus fugiat odio. Explicabo ex soluta hic
-        cumque, doloribus reprehenderit vitae tempore corporis commodi incidunt
-        molestias sunt saepe neque. Delectus quos nobis, non nemo dignissimos iure
-        incidunt debitis rerum mollitia culpa ipsum, itaque laborum natus
+        Lorem ipsum dolor sit amet .consectetur adipisicing elit. Repellendus,
+        quidem? Nihil placeat amet c.upiditate unde illo, eum nostrum maxime minus
+        reprehenderit in explicabo ar.chitecto dicta recusandae expedita
+        dignissimos cum? Exercitatione.m necessitatibus corrupti, fugit officiis,
+        nostrum quos accusamus qua.s ad. tenetur enim laborum dolorem non,
+        commodi reprehenderit autem labo.re, optio neque. Obcaecati commodi quas
+        consequuntur optio perferendis, e...arum quasi, modi iusto unde incidunt
+        ipsum quis eligendi repellendus fu.giat odio. Explicabo ex soluta hic
+        cumque, doloribus reprehenderit vit.ae tempore corporis commodi incidunt
+        molestias sunt saepe neque. Delectus. qu.os nobis, non nemo dignissimos iure
+        incidunt debitis rerum mollitia culpa. ipsum, itaque laborum natus
     </p>
 </body>
 <!-- <script src="script.js"></script>
