Implement a click on todo item as fast as possible

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <p id="lonely"></p>
 
     <p><input id="f" onkeyup="convert('F')"> degrees Fahrenheit</p>  -->
+        <ul class="todo-app">
+            <li class="item">Lorem ipsum dolor sit.</li>
+            <li class="item">aseeed afdoes esfkes.</li>
+            <li class="item">huaze iveo figta</li>
+        </ul>
+
+
 
     <h1>heading</h1>
     <p>
