--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <script src="objects.js"></script> -->
     <!-- <script src="./interview_module.js" ></script> -->
     <!-- <script src="interview.js" type="module"></script> -->
-    <script src="interview_dom.js"></script>
+    <!-- <script src="interview_dom.js"></script> -->
+    <script src="./interview_forward.js"></script>
     </html>
