--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <!-- <script src="./interview_module.js" ></script> -->
     <!-- <script src="interview.js" type="module"></script> -->
     <!-- <script src="interview_dom.js"></script> -->
-    <script src="./interview_forward.js"></script>
+    <!-- <script src="./interview_forward.js"></script> -->
+    <script src="./promises.js"></script>
     </html>
